--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Proyecto personal para recopilar información del clima en diferentes ciudades de Estados Unidos",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Candeagainn/Weather-scraper#readme",
   "dependencies": {
-    "puppeteer": "^22.12.1"
-  }
+    "puppeteer": "^22.13.0"
+  },
+  "devDependencies": {}
 }
